--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -2,10 +2,10 @@ version: '3'
 services:
   nibepi:
     container_name: "nibepi"
-    build: .
-#    image: anerdins/nibepi-base
+#    build: .
+    image: anerdins/nibepi-base:snapshot
     volumes:
-       - /home/pi/nibepi/config:/etc/nibepi
+       - /home/fredrik/nibepi-base:/etc/nibepi
        - "/etc/localtime:/etc/localtime:ro"
        - "/etc/timezone:/etc/timezone:ro"
     network_mode: "host"
